--- a/Facebook/index.html
+++ b/Facebook/index.html
@@ -28,8 +28,59 @@
                 <input type="text" placeholder="Search">
             </div>
 
-            <div class="nav-user-icon online">
+            <div class="nav-user-icon online" onclick="settingsMenuToggle">
                 <img src="images/profile-pic.png" alt="profile-pic">
+            </div>
+
+        </div>
+        <!--------------------------------------settings menu---------------------------------------------------->
+
+        <div class="settings-menu">
+
+            <div class="settings-menu-inner">
+
+                <div class="user-profile">
+                <img src="images/profile-pic.png" alt="">
+
+                <div>
+                    <p>John Nicholson</p>
+                    <a href="#">See your profile</a>
+                </div>
+
+            </div>
+            <hr>
+            <div class="user-profile">
+                <img src="images/feedback.png" alt="">
+
+                <div>
+                    <p>Give Feedback</p>
+                    <a href="#">Help us to improve the new design</a>
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="setting-links">
+                <img src="images/setting.png" alt="" class="settings-icon">
+                <a href="#">Settings and privacy <img src="images/arrow.png" width="10px" alt=""> </a>
+            </div>
+
+            <div class="setting-links">
+                <img src="images/help.png" alt="" class="settings-icon">
+                <a href="#">Help and support <img src="images/arrow.png" width="10px" alt=""> </a>
+            </div>
+
+            <div class="setting-links">
+                <img src="images/display.png" alt="" class="settings-icon">
+                <a href="#">Display & Accessibility <img src="images/arrow.png" width="10px" alt=""> </a>
+            </div>
+
+            <div class="setting-links">
+                <img src="images/logout.png" alt="" class="settings-icon">
+                <a href="#">logout <img src="images/arrow.png" width="10px" alt=""> </a>
+            </div>
+
             </div>
 
         </div>
@@ -412,6 +463,6 @@
 <div class="footer">
     <p>Copyright 2023 - Aropet Joel</p>
 </div>
-
+<script src="script.js"></script>
 </body>
 </html>
